--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -321,7 +321,8 @@ header {
 
   .contact-form {
     width: 100%;
-
+    position: relative;
+    
     input,
     textarea,
     button {
